src/test/ui/variance/variance-btree-invariant-types.base.stderr
error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:8:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::IterMut<'_, &'new (), _>`
              found struct `std::collections::btree_map::IterMut<'_, &'static (), _>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:7:21
   |
LL | fn iter_cov_key<'a, 'new>(v: IterMut<'a, &'static (), ()>) -> IterMut<'a, &'new (), ()> {
   |                     ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:13:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::IterMut<'_, _, &'new ()>`
              found struct `std::collections::btree_map::IterMut<'_, _, &'static ()>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:12:21
   |
LL | fn iter_cov_val<'a, 'new>(v: IterMut<'a, (), &'static ()>) -> IterMut<'a, (), &'new ()> {
   |                     ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:18:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::IterMut<'_, &'static (), _>`
              found struct `std::collections::btree_map::IterMut<'_, &'new (), _>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:17:24
   |
LL | fn iter_contra_key<'a, 'new>(v: IterMut<'a, &'new (), ()>) -> IterMut<'a, &'static (), ()> {
   |                        ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:23:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::IterMut<'_, _, &'static ()>`
              found struct `std::collections::btree_map::IterMut<'_, _, &'new ()>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:22:24
   |
LL | fn iter_contra_val<'a, 'new>(v: IterMut<'a, (), &'new ()>) -> IterMut<'a, (), &'static ()> {
   |                        ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:29:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `RangeMut<'_, &'new (), _>`
              found struct `RangeMut<'_, &'static (), _>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:28:22
   |
LL | fn range_cov_key<'a, 'new>(v: RangeMut<'a, &'static (), ()>) -> RangeMut<'a, &'new (), ()> {
   |                      ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:34:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `RangeMut<'_, _, &'new ()>`
              found struct `RangeMut<'_, _, &'static ()>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:33:22
   |
LL | fn range_cov_val<'a, 'new>(v: RangeMut<'a, (), &'static ()>) -> RangeMut<'a, (), &'new ()> {
   |                      ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:39:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `RangeMut<'_, &'static (), _>`
              found struct `RangeMut<'_, &'new (), _>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:38:25
   |
LL | fn range_contra_key<'a, 'new>(v: RangeMut<'a, &'new (), ()>) -> RangeMut<'a, &'static (), ()> {
   |                         ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:44:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `RangeMut<'_, _, &'static ()>`
              found struct `RangeMut<'_, _, &'new ()>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:43:25
   |
LL | fn range_contra_val<'a, 'new>(v: RangeMut<'a, (), &'new ()>) -> RangeMut<'a, (), &'static ()> {
   |                         ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:51:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::OccupiedEntry<'_, &'new (), _>`
              found struct `std::collections::btree_map::OccupiedEntry<'_, &'static (), _>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:49:20
   |
LL | fn occ_cov_key<'a, 'new>(v: OccupiedEntry<'a, &'static (), ()>)
   |                    ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:57:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::OccupiedEntry<'_, _, &'new ()>`
              found struct `std::collections::btree_map::OccupiedEntry<'_, _, &'static ()>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:55:20
   |
LL | fn occ_cov_val<'a, 'new>(v: OccupiedEntry<'a, (), &'static ()>)
   |                    ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:63:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::OccupiedEntry<'_, &'static (), _>`
              found struct `std::collections::btree_map::OccupiedEntry<'_, &'new (), _>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:61:23
   |
LL | fn occ_contra_key<'a, 'new>(v: OccupiedEntry<'a, &'new (), ()>)
   |                       ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:69:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::OccupiedEntry<'_, _, &'static ()>`
              found struct `std::collections::btree_map::OccupiedEntry<'_, _, &'new ()>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:67:23
   |
LL | fn occ_contra_val<'a, 'new>(v: OccupiedEntry<'a, (), &'new ()>)
   |                       ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:76:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::VacantEntry<'_, &'new (), _>`
              found struct `std::collections::btree_map::VacantEntry<'_, &'static (), _>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:74:20
   |
LL | fn vac_cov_key<'a, 'new>(v: VacantEntry<'a, &'static (), ()>)
   |                    ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:82:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::VacantEntry<'_, _, &'new ()>`
              found struct `std::collections::btree_map::VacantEntry<'_, _, &'static ()>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:80:20
   |
LL | fn vac_cov_val<'a, 'new>(v: VacantEntry<'a, (), &'static ()>)
   |                    ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:88:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::VacantEntry<'_, &'static (), _>`
              found struct `std::collections::btree_map::VacantEntry<'_, &'new (), _>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:86:23
   |
LL | fn vac_contra_key<'a, 'new>(v: VacantEntry<'a, &'new (), ()>)
   |                       ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:94:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `std::collections::btree_map::VacantEntry<'_, _, &'static ()>`
              found struct `std::collections::btree_map::VacantEntry<'_, _, &'new ()>`
note: the lifetime `'new` as defined here...
  --> $DIR/variance-btree-invariant-types.rs:92:23
   |
LL | fn vac_contra_val<'a, 'new>(v: VacantEntry<'a, (), &'new ()>)
   |                       ^^^^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0308`.
